<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/student"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_into_your_account"
        android:textSize="20sp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="330dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginTop="390dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textStart"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:hint="@string/password"
        android:textSize="20sp"
        android:padding="12dp"
        android:inputType="numberPassword"
        android:layout_marginTop="460dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textStart"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:layout_marginTop="520dp"
        android:layout_marginStart="250dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="#32CD32"
        android:layout_marginTop="550dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="100dp"
        android:padding="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont"
        android:textSize="20sp"
        android:layout_marginTop="620dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="620dp"
        android:layout_marginStart="280dp"
        />
</RelativeLayout>