<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90FFFF">
    <ImageView
        android:id="@+id/img1"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:background="#C608D1"
        android:src="@drawable/img"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/welcome_to_writer_s"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwelcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/content"
        android:textAlignment="center"
        android:textColor="#696969"
        android:textSize="17sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:backgroundTint="#ffffff"
        android:textColor="#000000"
        android:layout_marginTop="600dp"
        android:layout_marginStart="120dp"
        android:layout_alignParentStart="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign1"
        android:backgroundTint="#90FFFF"
        android:textColor="#000000"
        android:layout_marginTop="600dp"
        android:layout_marginStart="210dp"
        />
</RelativeLayout>